# kanden_hackathon_exasense202603

./: .gitignore  CLAUDE.md  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  deploy.yml  sync-from-company.yml  sync-to-company.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
configs/: solar_params.yaml
data/e2e_results/: e2e_results.json  garden_mesh_improved.ply
data/simulation_results/: irradiance_results.json
docker/: Dockerfile  Dockerfile.api  Dockerfile.frontend  Dockerfile.worker-gpu  Dockerfile.worker-sim  docker-compose.yml
docs/: company_setup.sh  daily-report-2026-03-03.md  dataset_card.md  gpu_verification_plan.md  index.html  infrastructure.md  model_card.md  presentation_outline.md  slides.html  slides.md  system_architecture_vision.md  waypoint-1-benchmark-report.md
frontend/: package-lock.json  package.json
frontend/public/: colosseum.glb  colosseum_alpha.glb  colosseum_bpa.glb  colosseum_pointcloud.glb  colosseum_poisson9.glb  south_building.glb  south_building_pointcloud.glb
infra/: gpu-verify-stack.yaml
infra/argocd/: application.yaml
infra/monitoring/: alerts.yaml  prometheus-values.yaml
infra/onprem/: setup-k3s.sh  setup-storage.sh
portal/: .env.local.example  .gitignore  Dockerfile  compose.yml  deploy.sh  package-lock.json  package.json
portal/terraform/: main.tf  outputs.tf  user_data.sh  variables.tf
scripts/: download_data.sh  generate_static_site.py  run_h100_e2e.py  run_h100_e2e.sh  run_waypoint_button_scan.py  run_waypoint_orbit.py  run_waypoint_test.py  setup_env.sh  setup_h100.sh  verify_h100.py
scripts/verification/: e2e_garden_test.sh  launch_aws_verify.sh  userdata.sh  verify_phase1_2.py
src/api/: __init__.py  auth.py  database.py  models.py  schemas.py  server.py  storage.py  vlm_bridge.py  ws.py
src/openvla-rust-tracing/: PAPER_DRAFT.md  README.md  __init__.py  generate_data_slurm.sh  infer_slurm.sh  rollout_slurm.sh  run_all_experiments.sh  train_slurm.sh
src/openvla-sim/: PAPER_DRAFT.md  README.md  RELATED_WORKS.md  collect_slurm.sh  infer_slurm.sh  run_all_experiments.sh  test.py  test_genesis_h100.py  test_video.py  (+3 more)
tests/: test_ray_caster.py  test_roi_calculator.py  test_solar_position.py
(+158 files in other folders)
