[project]
name = "exasense"
version = "0.1.0"
description = "Factory Energy Optimization Solution - Solar panel placement optimizer using 3D reconstruction and simulation"
requires-python = ">=3.10"
dependencies = [
    # Phase 3: Solar simulation
    "pvlib>=0.11.0",
    "trimesh>=4.0.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "plotly>=5.18.0",
    "scipy>=1.12.0",
    # Phase 5: WebUI
    "gradio>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.7",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    # Persistence
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "minio>=7.2.0",
    # Auth
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    # Utilities
    "pyyaml>=6.0",
    "rich>=13.0",
    "rtree>=1.4.1",
    "open3d>=0.19.0",
    "gunicorn>=22.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
gpu = [
    "embreex>=2.17.7; platform_machine == 'x86_64'",
]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
